docs: get invoice endpoint
